# pymine

./: .gitignore  LICENSE  README.md  docs.md  install_library.ps1  pyproject.toml
client/: __init__.py  client.py  create_requirements.ps1  create_wheelhouse.ps1  docs.md  example.py  install_library.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  test.py  tmp.py
client/pymine/: __init__.py  ast_transform.py  commands.py  datatypes.py  datavalues.py  events.py  exceptions.py
client/pymine/data/: blocks.py  entities.py  entityIDs.csv  itemIDs.txt  items.py  mobs.py
examples/: break_me.py  chicken_popcorn.py  midas_touch.py  tnt_challenge.py  zombie_game.py
pymine/server/: __init__.py  encryption.py  main.py
pymine/server/connectors/: __init__.py  base.py  bridge.py  http.py  minecraft.py  template.py  wsbridge.py
pymine/utils/: logging.py
server/: freeze_setup.py  pyproject.toml  requirements.txt  run.py
server/pymine-server/: main.py
server/pymine-server/connectors/: http.py  minecraft.py  websocket.py
server/pymine-server/utils/: encryption.py
server/pymine_server/: __init__.py  __main__.py  base.py  main.py  server.py  tray.py
server/pymine_server/connectors/: __init__.py  http.py  websocket.py
server/pymine_server/utils/: logging.py
