[tool.poetry]
name = "pymine-client"
version = "0.1.0"
description = "Server exposing a programmatic interface to Minecraft: Education Edition"
authors = ["Ollie Cheng <denosawr@vivaldi.net>"]
license = "MIT"

packages = [
    { include="pymine", from="." },
]

[tool.poetry.dependencies]
python = "^3.5.3"
requests = "^2.24.0"
enforce = "^0.3.4"

[tool.poetry.scripts]
client = "pymine:example"

[[tool.poetry.source]]
name = "pypi_with_cert"
url = "https://pypi.org/project/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

