[tool.poetry]
name = "pymine-client"
version = "0.1.0"
description = "Server exposing a programmatic interface to Minecraft: Education Edition"
authors = ["Ollie Cheng <denosawr@vivaldi.net>"]
license = "MIT"

packages = [
    { include="pymine", from="." },
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
enforce = "^0.3.4"
websocket-client = "^0.57.0"
websockets = "^8.1"
aiohttp = "^3.6.2"

[tool.poetry.scripts]
client = "pymine:example"

[[tool.poetry.source]]
name = "pypi_with_cert"
url = "https://pypi.org/project/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

