[tool.poetry]
name = "pymine-client"
version = "0.1.0"
description = "Server exposing a programmatic interface to Minecraft: Education Edition"
authors = ["Ollie Cheng <denosawr@vivaldi.net>"]
license = "MIT"

packages = [
    { include="pymine", from="." },
]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.24.0"
websocket-client = "^0.57.0"
websockets = "^8.1"
aiohttp = "^3.7.3"

# weird chardet dependency issue, atm `chardet = "^3.0.4"` doesn't work...
chardet = {url = "https://files.pythonhosted.org/packages/bc/a9/01ffebfb562e4274b6487b4bb1ddec7ca55ec7510b22e4c51f14098443b8/chardet-3.0.4-py2.py3-none-any.whl"}
cchardet = "^2.1.7"

ast-decompiler = "^0.4.0"

[tool.poetry.scripts]
client = "pymine:example"

[[tool.poetry.source]]
name = "pypi_with_cert"
url = "https://pypi.org/project/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

