[tool.poetry]
name = "pymine-server"
version = "0.1.0"
description = "Server exposing a programmatic interface to Minecraft: Education Edition"
authors = ["Ollie Cheng <denosawr@vivaldi.net>"]
license = "MIT"

packages = [
    { include="pymine-server", from="." },
]

[tool.poetry.dependencies]
python = "^3.6.1"
websockets = "^8.1"
pycryptodome = "^3.9.8"
colorlog = "^4.2.1"
aiohttp = "^3.6.2"

[tool.poetry.scripts]
run = "pymine-server:start_server"
server = "pymine-server:start_server"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "pypi_with_cert"
url = "https://pypi.org/project/"
default = true

