[tool.poetry]
name = "pymine-server"
version = "0.1.0"
description = "Server exposing a programmatic interface to Minecraft: Education Edition"
authors = ["Ollie Cheng <denosawr@vivaldi.net>"]
license = "MIT"

packages = [
    { include="pymine_server", from="." },
]

[tool.poetry.dependencies]
python = "^3.6.1"
websockets = "*"
pycryptodome = "^3.9.8"
aiohttp = "^3.6.2"
pystray = "^0.17.3"
pillow = "^8.3.1"
colorlog = "^5.0.1"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
cx-freeze = "^6.7"

[tool.poetry.scripts]
run = "pymine_server:run_program"
server = "pymine_server:start_server"
tray = "pymine_server:run_tray"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "pypi_with_cert"
url = "https://pypi.org/project/"
default = true

